# Survello

./: .gitignore  CLAUDE.md  DILAPS_PROCESS.md  README.md  sync_types.sh
backend/: .dockerignore  .env.cloud  .env.example  .env.swp  Check  Dockerfile  Makefile  alembic.ini  check_enum.py  create_db.py  dummy_s3.py  dump_openapi.py  fix_db_state.py  openapi.json  pyproject.toml  reproduce_issue.py  s3-cors.json  seed_dilaps_test.py  start.sh  tail_logs.sh  test_clustering.py  test_s3_debug.py
backend/app/: __init__.py  db.py  main.py
backend/app/api/: auth.py  deps.py  generate.py  store.py  users.py
backend/app/core/: db.py  deps.py  enums.py  logging.py  s3.py  security.py  settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  artefact_model.py  client_model.py  dilaps_model.py  embedding_model.py  exceptions.py  file_model.py  instruction_model.py  job_model.py  job_read_minimal.py  lead_model.py  models.py  orm.py  project_model.py  quote_model.py  request_models.py  run_model.py  survey_model.py  task_model.py  time_entry_model.py  update_model.py  user_model.py  waitlist_model.py
backend/app/orchestrators/: __init__.py  dilaps.py  docgen_orchestrator.py  generation.py
backend/app/prompts/: __init__.py  dilaps_analysis.py  dilaps_clause_extraction.py  dilaps_input.py  doc_analysis_prompt.py  doc_gen_prompt.py  system.py
backend/app/repositories/: artefact_repo.py  file_repo.py  run_repo.py  session_repo.py  user_repo.py  work_repo.py
backend/app/schemas/: auth_schemas.py  client_schemas.py  common_schemas.py  file_schemas.py  job_schemas.py  org_schemas.py  run_schemas.py  user_schemas.py  work_schemas.py
backend/app/services/: artefact_repository.py  docgen_orchestrator.py  docgen_service.py  email.py  file_repository.py  image_sectioning.py  job_repository.py  llm.py  openai_service.py  processing.py  run_repository.py  session_repository.py  storage.py  upload.py  user_repository.py  xlsx_export.py
backend/app/utils/: conversion.py  document_handler.py  exif.py  few_shot_loader.py  files.py  similarity.py
backend/migrations/: env.py
backend/migrations/versions/: 0e263c245743_detailed_views.py  164cf9136460_add_dilaps_progress_tracking_fields.py  233f13d762f7_fix_remaining_schema_diffs.py  34c29e353e46_add_finalising_to_run_status.py  3721e4c58c19_fix_fee_type_case.py  398023069eb4_add_is_individual_to_client.py  39f338e867c8_make_org_optional_and_drop_password_hash.py  3c735a18f21d_removed_some_stuff_and_added_projects.py  3e2027142b39_add_external_id_for_user_back_in.py  3fc35cccc84c_add_template_to_project_type.py  4a3b4f8041cb_expand_survey_model.py  5115db899230_add_time_entries.py  5e3fb65bcc12_add_completed_to_job_status.py  6680129b07d2_convert_weather_to_text.py  7166121146ff_add_billing_fields.py  74bf2b102407_sessions_for_auth_implementation.py  9112e414fb91_added_preview_pdf_collumn_to_job.py  92f4a8e73016_fix_artefact_job_relationship.py  97f535c090a6_remove_billing_add_instruction_type_to_.py  a1b2c3d4e5f6_add_lease_clauses_to_dilaps_runs.py  a85f20d84b15_add_leads_quotes_surveys_tasks.py  (+22 more)
backend/scripts/: helpers.py  reset_db.py  run.sh  test_pipeline_artifacts.py  test_s3_to_openai.py
backend/tests/: conftest.py  test_auth_endpoint.py  test_clients_endpoint.py  test_document_conversion.py  test_document_generation.py  test_document_generation_docx.py  test_files_endpoint.py  test_instructions_endpoint.py  test_jobs_endpoint.py  test_projects_endpoint.py  test_runs_endpoint.py  test_time_entries_endpoint.py  test_users_endpoint.py
doc-gen-api/: main.py  pyproject.toml  run.sh  utils.py
doc-gen-api/core/: config.py  logger.py
doc-gen-api/models/: request_models.py
doc-gen-api/prompts/: dilaps_input.py
doc-gen-api/routes/: process.py
doc-gen-api/services/: processing_service.py  upload_service.py
spikes/: mvp_test.ipynb  pyproject.toml
(+2767 files in other folders)
