[project]
name = "survello-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "boto3>=1.42.6",
    "boto3-stubs>=1.42.7",
    "contextgem>=0.19.4",
    "fastapi[standard]>=0.119.0",
    "google-genai>=1.68.0",
    "libmagic>=1.0",
    "openai>=2.7.2",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.38.0",
]

[tool.ruff]
indent-width = 4
exclude = ["app/prompts/*.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "ERA",    # eradicate (commented-out code)
    "PLR",    # pylint refactor
    "RUF",    # ruff-specific
]
ignore = [
    "ERA001", # allow some commented code in existing files
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.ty.src]
include = ["app", "tests"]
exclude = ["migrations"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ty>=0.0.13",
]
