[project]
name = "docgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "pypandoc>=1.16",
    "pypdf>=6.1.3",
    "reportlab>=4.4.4",
]

[tool.uv.workspace]
members = [
    "doc-gen-api",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
